--- a/my_gemm/Makefile
+++ b/my_gemm/Makefile
@@ -4,7 +4,7 @@ EXE_FILES=$(CC_FILES:.cu=)
 all:$(EXE_FILES)
 
 %:%.cu
-	nvcc -o $@ $< -g -arch=sm_90 -std=c++17 -I../../cutlass/include --expt-relaxed-constexpr -cudart shared --cudadevrt none -lcublasLt -lcublas
+	nvcc -o $@ $< -g -arch=sm_80 -std=c++17 -I/root/cutlass/include --expt-relaxed-constexpr -cudart shared --cudadevrt none -lcublasLt -lcublas
 
 clean:
 	rm -rf $(EXE_FILES)
