--- a/transpose-cute/Makefile
+++ b/transpose-cute/Makefile
@@ -1,4 +1,4 @@
-CUTLASS_DIR=${PWD}/../external/cutlass
+CUTLASS_DIR=${PWD}/../../cutlass
 CXX=nvcc
 
 CXXFLAGS=--generate-code=arch=compute_90a,code=[compute_90a] -std=c++17 -O3 -Xcompiler=-Wno-psabi -Xcompiler=-fno-strict-aliasing -I${CUTLASS_DIR}/include -I${CUTLASS_DIR}/examples/common -I${CUTLASS_DIR}/tools/util/include --expt-relaxed-constexpr
